syntax = "proto3";

package go.micro.srv.user;

service User {
	rpc SendSms(Request) returns (Response) {};
	rpc Register(RegReq) returns (Response) {};
}

message RegReq {
    string mobile = 1;
    string password = 2;
    string sms_code = 3;
}

message Request {
	string phone = 1;
	string imgCode = 2;
	string uuid = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}
